deployments/workloads/media/jellyseerr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyseerr-deployment
  labels:
    app: jellyseerr
spec:
  replicas: 0
  selector:
    matchLabels:
      app: jellyseerr
  template:
    metadata:
      labels:
        app: jellyseerr
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: jellyseerr
          image: fallenbagel/jellyseerr:latest
          ports:
            - containerPort: 5055
          volumeMounts:
            - name: nfs-configs
              mountPath: /app/config
              subPath: jellyseerr
          resources:
            limits:
              memory: "1000Mi"
              cpu: "1000m"
            requests:
              memory: "500Mi"
              cpu: "500m"
      volumes:
        - name: nfs-configs
          nfs:
            server: 10.10.10.146
            path: /mnt/bigdata/kubernetes/media/configs
            readOnly: false
