deployments/workloads/media/jellyseerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr-service
spec:
  selector:
    app: jellyseerr
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5055
