deployments/workloads/media/jellyseerr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin-http-route
spec:
  parentRefs:
    - name: shared-gateway
      namespace: infra
  hostnames:
    - "request.dev.nilsherzig.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: jellyseerr
          port: 80
