deployments/workloads/media/jellyseerr/cilium.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "jellyseerr"
spec:
  endpointSelector:
    matchLabels:
      app: jellyseerr
  egress:
    - toEntities:
        - cluster
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
  ingress:
    - fromEndpoints:
        - matchLabels:
            name: "cilium-envoy"
      toPorts:
        - ports:
            - port: "5055"
              protocol: TCP
